[gd_scene load_steps=7 format=3 uid="uid://c6e46jh8k5rb"]

[ext_resource type="Script" path="res://scripts/enemysWord1to10/hipopotamo.gd" id="1_clflm"]
[ext_resource type="Texture2D" uid="uid://id3odc0r670" path="res://tiles/world1-10/spritesHipopotamo.png" id="1_e3pic"]

[sub_resource type="Animation" id="Animation_lruhe"]
resource_name = "caminar"
length = 3.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesHipopotamo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4, 2.1, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 1, 5, 2]
}

[sub_resource type="Animation" id="Animation_pq263"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesHipopotamo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tpcxx"]
_data = {
"RESET": SubResource("Animation_pq263"),
"caminar": SubResource("Animation_lruhe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omhaw"]
size = Vector2(71, 50)

[node name="hipopotamo" type="Area2D"]
script = ExtResource("1_clflm")

[node name="SpritesHipopotamo" type="Sprite2D" parent="."]
position = Vector2(55, 42)
scale = Vector2(0.565068, 0.54918)
texture = ExtResource("1_e3pic")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tpcxx")
}
speed_scale = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(55.5, 42)
shape = SubResource("RectangleShape2D_omhaw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
